--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -24,5 +24,30 @@
     --palette-yellow-muted: #D1B16C;
     --palette-light-brown: #A49890;
 
+    --color-background: #F5F5F5;
     --text-grey: #222;
+
+    --font-display: 'DM Serif Display', serif;
+    --font-body: 'Inter Tight', sans-serif;
+}
+
+body {
+    font-family: var(--font-body);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.2;
+    color: var(--text-grey)
+}
+
+section {
+    padding: 2rem 3.5rem
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--font-display);
 }
