--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -51,6 +51,13 @@
     --font-size-5: clamp(2.4883rem, 1.8693rem + 3.0953vw, 4.5776rem);
 }
 
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
     font-family: var(--font-body);
     font-size: 1rem;
@@ -72,4 +79,10 @@ h6 {
     font-family: var(--font-display);
     padding: 0;
     margin: 0;
+}
+
+svg {
+    display: block;
+    width: 100%;
+    height: auto;
 }
