adds works grid responsiveness

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -49,6 +49,14 @@
     --font-size-4: clamp(2.0736rem, 1.6029rem + 2.3533vw, 3.6621rem);
     /* Step 5: 39.8131px → 73.2422px */
     --font-size-5: clamp(2.4883rem, 1.8693rem + 3.0953vw, 4.5776rem);
+
+    /* PADDING */
+    /* will scale between 16px at 700px and 32px at 1200px. */
+    --card-padding: clamp(1rem, -0.4rem + 3.2vw, 2rem);
+
+    /* will scale between 20px at 500px and 32px at 1200px. */
+    --section-padding: clamp(1.25rem, 0.714rem + 1.714vw, 2rem);
+
 }
 
 
