hero styling and responsiveness

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -57,6 +57,9 @@
     /* will scale between 20px at 500px and 32px at 1200px. */
     --section-padding: clamp(1.25rem, 0.714rem + 1.714vw, 2rem);
 
+    /* will scale between 20px at 500px and 48px at 1200px. */
+    --page-padding: clamp(1.25rem, 0rem + 4vw, 3rem);
+
 }
 
 
@@ -75,7 +78,7 @@ body {
 }
 
 section {
-    padding: 1.5rem 3.5rem 2.5rem 3.5rem
+    padding: 1.5rem var(--page-padding) 2.5rem var(--page-padding)
 }
 
 h1,
@@ -93,4 +96,10 @@ svg {
     display: block;
     width: 100%;
     height: auto;
+}
+
+@media (max-width: 450px) {
+    section {
+        padding: 1rem var(--page-padding) 2rem var(--page-padding)
+    }
 }
