--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -98,6 +98,36 @@ svg {
     height: auto;
 }
 
+.card {
+    position: relative;
+
+    width: 100%;
+    max-width: max(75vw, 1200px);
+    height: 100%;
+    max-height: 100%;
+    padding: 0 2rem 0 3rem;
+    background-color: var(--color-background);
+    border: 1px solid #929292;
+    box-shadow: -4px 5px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+
+.card::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+
+    background-image: var(--card-texture);
+    background-size: 600px 450px;
+    background-repeat: repeat;
+    background-position: top left;
+    mix-blend-mode: darken;
+    opacity: 0.3;
+    z-index: 0;
+}
+
 @media (max-width: 450px) {
     section {
         padding: 1rem var(--page-padding) 2rem var(--page-padding)
