--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -104,7 +104,7 @@ svg {
     max-width: max(75vw, 1200px);
     height: 100%;
     max-height: 100%;
-    padding: 0 2rem 0 3rem;
+    padding: 2rem var(--card-padding);
     background-color: var(--color-background);
     border: 1px solid #929292;
     box-shadow: -4px 5px 4px rgba(0, 0, 0, 0.25);
