--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -57,8 +57,8 @@
     /* will scale between 20px at 500px and 32px at 1200px. */
     --section-padding: clamp(1.25rem, 0.714rem + 1.714vw, 2rem);
 
-    /* will scale between 20px at 500px and 48px at 1200px. */
-    --page-padding: clamp(1rem, -0.429rem + 4.571vw, 3rem);
+    /* will scale between 12x at 500px and 48px at 1200px. */
+    --page-padding: clamp(0.75rem, -0.857rem + 5.143vw, 3rem)
 }
 
 
